# hud-data-science-tutorial

./: .env.example  .gitignore  .hud_eval.toml  Dockerfile.hud  README.md  TEST_DOCKER.md  env.py  local_test.py  pyproject.toml  run_eval.py  test_tasks.json  winequality-red.csv  winequality-white.csv
